<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.project.CreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/create_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:contentInsetStart="4dp"
        android:elevation="4dp"
        app:navigationIcon="?attr/homeAsUpIndicator">

        <TextView
            android:text="@string/create_activity_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/create_activity_input_text_size"
            android:textColor="@color/niceWhiteDebox"
            android:layout_centerVertical="true" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/create_activity_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:id="@+id/createActivityTitle" />

            <EditText
                android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@color/lightGreyDebox"
                android:hint="@string/create_activity_name_hint"
                android:textSize="@dimen/create_activity_input_text_size"
                android:ems="10"
                android:background="@drawable/create_activity_edit_text"
                android:id="@+id/createActivityTitleEditText" />

            <LinearLayout
                android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/proSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="37dp"
                    android:ems="15"
                    android:drawableRight="@android:drawable/ic_menu_search"
                    android:textSize="@dimen/create_activity_input_text_size"
                    android:layout_gravity="center"
                    android:background="@drawable/create_activity_edit_text"
                    android:dropDownVerticalOffset="5dp"
                    android:dropDownWidth="wrap_content"
                    android:hint="@string/select_category_hint" />


            </LinearLayout>


            <EditText
                android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:textColor="@color/lightGreyDebox"
                android:lines="5"
                android:maxLines="20"
                android:textSize="@dimen/create_activity_input_text_size"
                android:hint="@string/create_activity_description_hint"
                android:ems="10"
                android:background="@drawable/create_activity_edit_text"
                android:id="@+id/createActivityDescriptionEditText" />


            <LinearLayout
                android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/create_activity_starting_time_textView"
                    android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:id="@+id/createActivityStartingTimeTextView" />

                <TextView
                    android:text="@string/test_text"
                    android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                    android:layout_weight="0.8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:onClick="showStartDatePickerDialog"
                    android:id="@+id/createActivityStartDate" />

                <TextView
                    android:text="@string/test_text"
                    android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:onClick="showStartTimePickerDialog"
                    android:id="@+id/createActivityStartTime" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text= "@string/create_activity_ending_time_textView"
                    android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:id="@+id/createActivityEndingTimeTextView" />

                <TextView
                    android:text="@string/test_text"
                    android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:onClick="showEndDatePickerDialog"
                    android:id="@+id/createActivityEndDate" />

                <TextView
                    android:text="@string/test_text"
                    android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:onClick="showEndTimePickerDialog"
                    android:id="@+id/createActivityEndTime" />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/create_activity_top_bottom_margin">

                <Button
                    android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                    android:text="@string/create_activity_set_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/niceWhiteDebox"
                    android:background="@color/niceBlueDebox"
                    android:id="@+id/createActivityLocation"
                    android:onClick="chooseLocation" />

                <Button
                    android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                    android:text="@string/create_activity_upload_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/niceWhiteDebox"
                    android:background="@color/niceBlueDebox"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:id="@+id/createActivityUploadImage"
                    android:onClick="pickImage" />

            </LinearLayout>

            <EditText
                android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:id="@+id/createActivityMaxNbParticipantsEditText"
                android:inputType="number"
                android:background="@drawable/create_activity_edit_text"
                android:textSize="@dimen/create_activity_input_text_size"
                android:textColor="@color/lightGreyDebox"
                android:hint="@string/create_activity_maximum_number_of_participants"/>

            <TextView
                android:text=""
                android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/createActivityError" />

            <Button
                android:layout_marginTop="@dimen/create_activity_top_bottom_margin"
                android:text="@string/create_activity_create_activity_button"
                android:paddingLeft="@dimen/create_activity_left_right_margin"
                android:paddingRight="@dimen/create_activity_left_right_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="createActivity"
                android:id="@+id/createActivityValidateButton"
                android:textColor="@color/niceWhiteDebox"
                android:background="@color/green" />


        </LinearLayout>

    </ScrollView>
    </LinearLayout>

</RelativeLayout>
